Fix landing overlay texts overlapping/merging on load

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -213,6 +213,7 @@
 .landing-h2-info-1 {
   position: absolute;
   top: 0;
+  opacity: 0;
 }
 h2.landing-info-h2 {
   color: #00ff88;
@@ -226,6 +227,7 @@ h2.landing-info-h2 {
 .landing-h2-2 {
   position: absolute;
   top: 0;
+  opacity: 0;
 }
 .landing-info-h2::after {
   content: "";
